Final changes needed to support TDES

--- a/Indulj.Ff3/Indulj.Ff3.csproj
+++ b/Indulj.Ff3/Indulj.Ff3.csproj
@@ -11,6 +11,8 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
     <DefineConstants>TRACE;HAVE_SPAN</DefineConstants>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
