FF3 implementation updates and fixes
- Automatically select suitable values for 'minlen' and 'maxlen' by default
- Fix major bugs related to 3DES support, despite the claims of the previous commit
- Implement BpsEncrypt
- Implement BpsDecrypt correctly, this time

--- a/Indulj.Ff3/Indulj.Ff3.csproj
+++ b/Indulj.Ff3/Indulj.Ff3.csproj
@@ -13,6 +13,7 @@
     <DefineConstants>TRACE;HAVE_SPAN</DefineConstants>
     <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
+    <DocumentationFile>C:\Users\Stevie-O\projects\Indulj.Ff3\Indulj.Ff3\Indulj.Ff3.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
